--- a/test.css
+++ b/test.css
@@ -1,4 +1,9 @@
-body {
-    background-color: rgb(0, 0, 0);
+h1 {
+    background-color: red;
     color: white;
+    text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: -10px;
+    padding: 20px;
+
 }
